# backend

./: .gitignore  build.sh  check_models.py  import_projects.py  models.txt  pyproject.toml  requirements.txt  sync_portfolio.py  test_env.py
backend/: exceptions.py  middleware.py  settings.py  urls.py
chatbot/: admin.py  health.py  health_urls.py  models.py  portfolio_data.md  prompts.py  serializers.py  urls.py  utils.py  views.py
chatbot/migrations/: 0001_initial.py  0002_contactrequest.py  0003_contactrequest_status_hiringrequest_status.py  0004_chatsession_chatmessage.py  0005_auto_20260110_1832.py  0005_profile.py
experience/: admin.py  models.py  serializers.py  urls.py  views.py
experience/migrations/: 0001_initial.py  0002_rename_tech_stack_experience_achievements_and_more.py  0003_education.py
projects/: admin.py  ai_services.py  models.py  utils.py  views.py
projects/management/commands/: create_admin_user.py  update_projects.py
projects/migrations/: 0001_initial.py  0002_project_github_forks_project_github_stars_and_more.py  0003_project_category_project_is_featured_and_more.py  0004_project_has_figma_project_has_team_and_more.py  0005_project_app_link.py  0006_project_api_docs_link_project_built_during_and_more.py  0007_project_overview.py
projects/templates/admin/projects/project/: change_form.html
vishal/: admin.py  apps.py  models.py  utils.py  views.py
vishal/migrations/: 0001_initial.py
